fixed white space on right side

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,9 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: rgb(248, 88, 2);
+    width:100%;
+    overflow-x: hidden;
+    background-color: rgb(248, 88, 2);  
 }
 
 /* ************** header section ************** */
